fixed overlaps in breadcrumb and file list at small display sizes.

--- a/client/app/styles/note.styl
+++ b/client/app/styles/note.styl
@@ -46,6 +46,9 @@ iframe
     top 2em
     padding-left: 3em
 
+    @media (max-width: 10in)
+        top: 0
+
 #note-full
     padding: 0
     border: 0
@@ -295,6 +298,9 @@ iframe
     top 0.75em
     right 3.5%
     margin-right: 1.4em
+
+    @media (max-width: 10in)
+        top: 2em
 
     #file-pic
         left auto
